tests/snapshots/snapshots__insert_priority_chooser_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▀▚ /tmp/chiba-snapshot.md  •  15 tasks  DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cle due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home             1      3   (B) Review pull requests for auth  contexts  @laptop                
   +learning         1      4   (B) Renew passport before summer t                                  
   +personal         1      5   (B) Draft hiring rubric for senior RAW                              
   +travel           1     (2)  PRIORITY C  ──────────────────────                                  
                            6   (C) Pay quarterly estimated taxes  (A) 2026-05-01 Finish Q2 board   
 CONTEXTS                   7   (C) Order new running shoes +healt deck +work @laptop               
   @errands          4     (8)┌ ADD TASK ────────────────────────────┐:2026-05-06                   
   @home             4      8 │                                      │                              
   @laptop           4      9 │  › Buy milk +groceries█              │                              
   @phone            3     10 │  ok · 1 +project                     │                              
                           11 │                                      │                              
                           12 │  format: (A) Buy milk +shop @home due│                              
                           13 │                                      │                              
                           14 └──────────────────────────────────────┘                              
                           15     ┌ PRIORITY ────────────┐h K. @ph                                  
                                  │  (A)                 │                                          
                                  │  (B)                 │                                          
                                  │  (C)                 │                                          
                                  │  clear               │                                          
                                  │                      │                                          
                                  │  jk move · Enter set │                                          
                                  └──────────────────────┘                                          
                                                                                                    
                                                                                                    
                                                                                                    
 INSERT   Enter save · Esc normal                             15 open · 2026-05-06 · chiba 2026.7.1
